# service-scaler

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  example.yaml  rbac.yaml  servicescaler.scaler.udaan.io.yaml
src/: crd.rs  finalizer.rs  hpa.rs  main.rs  scale.rs  util.rs
