[package]
name = "operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]} # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
kube = { version = "0.87.1", default-features = true, features = ["derive", "runtime", "config"]} # Library for talking to Kubernetes API
k8s-openapi = { version = "0.20.0", default-features = false, features = ["v1_22"]} # Kube-rs depends on k8s-openapi
chrono = "0.4.31" # datetime library
futures = "0.3"
log = "0.4.20"
env_logger = "0.10.1"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"
lazy_static = "1.5.0"